--- a/assets/app/src/modules/templates/consumer.html
+++ b/assets/app/src/modules/templates/consumer.html
@@ -18,13 +18,13 @@
 				<div class="detail-item consumer-show">
 					<span class="detail-label" v-l10n.Consumer.ConsumerShow></span>
 					<span v-if="isViewing" class="detail-value">{{consumerShow | boolean}}</span>
-					<input-toggle v-if="!isViewing" v-model="consumerShow" class="detail-value" v-focus></input-toggle>
+					<input-toggle v-if="!isViewing" class="detail-value-input" v-model="consumerShow" v-focus></input-toggle>
 				</div>
 
 				<div class="detail-item consumer-spending-limit">
 					<span class="detail-label" v-l10n.Consumer.SpendingLimit></span>
 					<span v-if="isViewing" class="detail-value">{{spendingLimit | money}}</span>
-					<input-price v-if="!isViewing" class="detail-value" v-model="spendingLimit"></input-price>
+					<input-price v-if="!isViewing" class="detail-value-input" v-model="spendingLimit"></input-price>
 				</div>
 			</form>
 
