App: do not auto-propagate keyboard events. Refactors registration of `escape` listeners to only apply when applicable per component or component state.

--- a/assets/app/src/modules/templates/form/input-search.html
+++ b/assets/app/src/modules/templates/form/input-search.html
@@ -5,6 +5,13 @@
 	</button>
 
 	<div class="input-searchbar">
-		<input class="search-option" ref="search" type="text" :value="value" @input="input" @submit="input"/>
+		<input
+			class="search-option"
+			ref="search"
+			type="text"
+			:value="value"
+			@input="input"
+			@submit="input"
+			@keydown.escape="cancel" />
 	</div>
 </div>
