--- a/assets/app/src/styles/main.scss
+++ b/assets/app/src/styles/main.scss
@@ -11,6 +11,7 @@
 	overflow: hidden;
 	color: var(--text-default);
 	background: var(--background-default);
+	-webkit-tap-highlight-color: transparent;
 	user-select: none;
 	opacity: 0;
 	transition:
