Collection: in their metabox identify Collection consumers with negative totals

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -565,6 +565,10 @@ body.incassoos-post-view .incassoos-item-list .occasion-consumer-type {
 	box-sizing: border-box;
 }
 
+.incassoos-item-list .negative-amount .open-details {
+	color: #f06060;
+}
+
 .incassoos-item-list .item-details {
 	display: none;
 	margin-top: 2px;
