App/Receipt: improve section switching on small screens
Only expand/collapse the receipt with onclick for the item list header image and the total value button.
Switch to the consumers section when clicking on 'Select a consumer'.
Switch to the products section when clicking on 'Select products'.

Styles are adjusted to increase the target surface of the section switchers.

--- a/assets/app/src/styles/receipt.scss
+++ b/assets/app/src/styles/receipt.scss
@@ -66,13 +66,13 @@
 
 		.item-list-header {
 			position: relative;
-			padding: 35px 70px 15px;
+			padding: 25px 70px 5px;
+			grid-gap: 5px;
 			opacity: 0;
 			transform: translateY(120px);
 			transition: transform .6s linear;
 			transition-delay: .2s;
 			text-align: center;
-			cursor: pointer;
 
 			.item-list-header-image {
 				position: absolute;
@@ -90,8 +90,17 @@
 				}
 			}
 
-			.item-subtitle {
-				min-height: 1em;
+			.topic {
+				margin-top: 10px;
+			}
+
+			.item-title-wrapper {
+				width: 100%;
+				padding: 10px 0px;
+
+				.item-subtitle {
+					min-height: 1em;
+				}
 			}
 		}
 
@@ -163,6 +172,15 @@
 
 					.item-action {
 						border-radius: 0px;
+					}
+				}
+
+				&.no-items {
+					.select-products {
+						padding: 10px 0px;
+						font-style: normal;
+						font-weight: 600;
+						cursor: pointer;
 					}
 				}
 			}
