--- a/assets/app/src/modules/templates/receipt.html
+++ b/assets/app/src/modules/templates/receipt.html
@@ -5,15 +5,15 @@
 		<span class="total-value">{{totalPrice | money}}</span>
 	</div>
 
-	<div v-toggle="isExpanded" class="item-list-header">
-		<div class="item-list-header-image" @click="setActiveConsumersSection">
+	<div class="item-list-header">
+		<div v-toggle="isExpanded" class="item-list-header-image">
 			<object class="avatar-image" :data="consumer.avatarUrl" type="image/png" v-l10n-alt.Consumer.AvatarOf="consumer.name"></object>
 		</div>
 
 		<h2 class="topic" v-if="!order" v-l10n.Receipt.ListHeading></h2>
 		<span class="topic" v-else>{{order.date | datetime}}</span>
 
-		<div class="item-title-wrapper">
+		<div class="item-title-wrapper" @click="setActiveConsumersSection">
 			<span class="item-title" v-l10n="consumer.name"></span>
 			<span class="item-subtitle" v-l10n="consumer.group.name"></span>
 		</div>
@@ -56,6 +56,7 @@
 
 			<li v-if="!receipt.length" class="item no-items">
 				<span class="no-items-found" v-l10n.Receipt.NoItems></span>
+				<span @click="setActiveProductsSection" class="select-products" v-l10n.Receipt.SelectProducts></span>
 			</li>
 		</ul>
 	</div>
