App: improve loading screen by showing loading statuses

--- a/assets/app/src/styles/generic.scss
+++ b/assets/app/src/styles/generic.scss
@@ -20,7 +20,8 @@ body {
 	background: #f1f1f1;
 }
 
-body {
+body,
+#incassoos-app {
 	background: url('../images/loader.svg') center center no-repeat;
 	background-size: 40px;
 }
