--- a/assets/app/src/modules/templates/main.html
+++ b/assets/app/src/modules/templates/main.html
@@ -4,30 +4,36 @@
 	'darkmode': $darkmode,
 	'debugmode': $debugmode,
 	'offline': $offline
-}" v-if="$isLoaded">
-	<div id="page-heading" :data-fsm-state="$fsmState">
-		<div class="heading-left">
-			<global-leave-button></global-leave-button>
-			<global-login-toggle></global-login-toggle>
-			<global-edit-toggle></global-edit-toggle>
-			<global-cancel-toggle></global-cancel-toggle>
+}">
+	<div class="app-container" v-if="$isLoaded">
+		<div id="page-heading" :data-fsm-state="$fsmState">
+			<div class="heading-left">
+				<global-leave-button></global-leave-button>
+				<global-login-toggle></global-login-toggle>
+				<global-edit-toggle></global-edit-toggle>
+				<global-cancel-toggle></global-cancel-toggle>
+			</div>
+
+			<hgroup class="heading-center">
+				<page-title></page-title>
+			</hgroup>
+
+			<div class="heading-right">
+				<span class="clock" v-text="$clock"></span>
+			</div>
 		</div>
 
-		<hgroup class="heading-center">
-			<page-title></page-title>
-		</hgroup>
-
-		<div class="heading-right">
-			<span class="clock" v-text="$clock"></span>
+		<div id="page-body" v-if="!$offline">
+			<panels></panels>
+			<sections></sections>
 		</div>
+
+		<offline-status></offline-status>
+		<dialog-container></dialog-container>
+		<feedback name="global" :reverse="true" :auto-remove="true"></feedback>
 	</div>
 
-	<div id="page-body" v-if="!$offline">
-		<panels></panels>
-		<sections></sections>
+	<div class="app-status" v-else>
+		<app-loading-status></app-loading-status>
 	</div>
-
-	<offline-status></offline-status>
-	<dialog-container></dialog-container>
-	<feedback name="global" :reverse="true" :auto-remove="true"></feedback>
 </div>
