Reposition the application loading status text to keep the same distance to the loader image regardless of the number of lines

--- a/assets/app/src/styles/main.scss
+++ b/assets/app/src/styles/main.scss
@@ -5,6 +5,7 @@
 
 #incassoos-app {
 	font-family: #{$font-family-default};
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	height: 100%;
