--- a/assets/app/src/styles/page.scss
+++ b/assets/app/src/styles/page.scss
@@ -5,13 +5,14 @@
 }
 
 .app-status {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	height: 100%;
-	transform: translateY(50px);
-	color: rgb( 90, 90, 90); // Match loader color
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 100%;
+	padding: 25px;
+	color: var(--text-default);
+	text-align: center;
+	transform: translate(-50%, 20px);
 
 	.loading-status:not(:empty):after {
 		content: '\2026'; // Ellipsis
