App: expand the search bar inputs for the Consumers and Products lists

--- a/assets/app/src/modules/templates/products.html
+++ b/assets/app/src/modules/templates/products.html
@@ -5,7 +5,7 @@
 		<h2 class="section-topic" v-l10n.Product.ListHeading></h2>
 
 		<div class="item-list-actions">
-			<input-search v-model="q"></input-search>
+			<input-search v-model="q" always-open="true"></input-search>
 			<button type="button" v-if="$isSettings && haveTrashedProducts" v-toggle="showTrashedProducts" v-l10n="toggleTrashedItemsLabel"></button>
 			<button type="button" v-if="creatable && !showTrashedProducts" @click="create" v-l10n.Product.CreateNew></button>
 
