App/Receipt: collapse the receipt when focussing/clicking outside the receipt, but ignore when clicking list items

--- a/assets/app/src/styles/generic.scss
+++ b/assets/app/src/styles/generic.scss
@@ -69,6 +69,7 @@ select {
 	&[disabled]:active {
 		color: var(--button-color-disabled);
 		background: var(--button-background-disabled);
+		pointer-events: none;
 	}
 }
 
