App: restructure sections for medium sized screens
Introduces the new Resize Service which triggers event listeners for specified breakpoints so that
they are handled in a central place. Definition of the breakpoints still happens in the Sections component.

In the medium screen size, the new setup has the consumers section as always active, instead of the order panel.
This should reduce clicks and increases focus on entering new orders, without the need to switch sections.

--- a/assets/app/src/modules/templates/sections.html
+++ b/assets/app/src/modules/templates/sections.html
@@ -1,12 +1,14 @@
 <main id="sections" ref="sections" v-if="$isReady" :inert="isPanelActive">
 	<section
 		id="consumers"
+		ref="consumers"
 		:class="{ 'is-active': isConsumersActive, 'is-not-active': ! isConsumersActive }">
 		<consumers @activeSection="setConsumersActive"></consumers>
 	</section>
 
 	<section
 		id="products"
+		ref="products"
 		:class="{ 'is-active': isProductsActive, 'is-not-active': ! isProductsActive }">
 		<products @activeSection="setProductsActive"></products>
 	</section>
