App: only animate item list elements that concern actual selectable items

--- a/assets/app/src/styles/orders.scss
+++ b/assets/app/src/styles/orders.scss
@@ -6,7 +6,10 @@
 	}
 
 	.item {
-		animation: active-background-fade 2s ease;
+
+		&:has(.select-item) {
+			animation: active-background-fade 2s ease;
+		}
 
 		.select-item {
 			display: flex;
