App: uncenter the panel header image for small screens

--- a/assets/app/src/styles/panels.scss
+++ b/assets/app/src/styles/panels.scss
@@ -138,7 +138,7 @@
 
 			.single-panel .panel-header .panel-header-image {
 				position: initial;
-				margin: auto -5px;
+				margin: 0px -5px;
 				padding: 0px;
 				background: none;
 				transform: none;
