App: display plugin version in the administration panel

--- a/assets/app/src/modules/templates/administration.html
+++ b/assets/app/src/modules/templates/administration.html
@@ -45,5 +45,10 @@
 			<span class="detail-label" v-l10n.Administration.FactoryResetLabel></span>
 			<factory-reset></factory-reset>
 		</div>
+
+		<div class="detail-item">
+			<span class="detail-label" v-l10n.Administration.Version></span>
+			<span class="detail-value">{{pluginVersion}}</span>
+		</div>
 	</div>
 </div>
