App/Receipt: only show the 'Select Products' toggle when the products section is not active

--- a/assets/app/src/styles/receipt.scss
+++ b/assets/app/src/styles/receipt.scss
@@ -177,6 +177,7 @@
 
 				&.no-items {
 					.select-products {
+						display: none;
 						padding: 10px 0px;
 						font-style: normal;
 						font-weight: 600;
