App/Receipt: disable all receipt elements below the list header when collapsed

--- a/assets/app/src/styles/sections.scss
+++ b/assets/app/src/styles/sections.scss
@@ -182,6 +182,11 @@
 						.item-subtitle {
 							visibility: hidden;
 						}
+
+						// Disable all below the list header
+						& ~ * {
+							display: none;
+						}
 					}
 				}
 
