--- a/assets/app/src/styles/generic.scss
+++ b/assets/app/src/styles/generic.scss
@@ -100,9 +100,12 @@ button.submit-button:not([disabled]) {
 	background: var(--color-submit);
 	color: var(--color-submit-contrast);
 
-	&:focus,
+	&:focus {
+		box-shadow: 0px 0px 0px 2.5px #fff, inset 100px 100px rgba(0, 0, 0, .25);
+	}
+
 	&:hover {
-		box-shadow: inset 100px 100px rgba(0, 0, 0, .1);
+		box-shadow: inset 100px 100px rgba(0, 0, 0, .25);
 	}
 }
 
